--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "ios": "expo start --ios --offline",
     "ci": "npm install",
     "web": "expo start --web --offline",
-    "build": "npx expo export:web && eas update",
+    "build:web": "npx expo export:web",
+    "build": "build:web && eas update",
     "deploy": "firebase deploy",
     "build-deploy": "npm run build && npm run deploy",
     "publish:ios": "eas submit --platform ios",
