added azure sso

--- a/backend/.env
+++ b/backend/.env
@@ -21,3 +21,7 @@ OAUTH2_SCOPE="profile email"
 
 API_URL_PREFIX_IOS='http://localhost:3333/api'
 API_URL_PREFIX_ANDROID='http://10.0.2.2:3333/api'
+
+
+AAD_CLIENT_ID=4113fbdb-2b60-4cf1-bfa7-c74282f508d2
+AAD_TENANT_ID=00a83132-4221-4698-a787-6d679d557a90
