--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "passport": "^0.6.0",
+    "passport-azure-ad": "^4.3.5",
     "passport-jwt": "^4.0.1",
     "passport-oauth2": "^1.7.0",
     "pg": "^8.11.0",
@@ -44,6 +45,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
+    "@types/passport-azure-ad": "^4.3.1",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
