--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,9 @@
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.10",
     "react-native-svg": "13.4.0",
-    "expo-updates": "~0.16.4"
+    "expo-updates": "~0.16.4",
+    "expo-auth-session": "~4.0.3",
+    "expo-crypto": "~12.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
