--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "react-native-gesture-bottom-sheet": "^1.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-svg": "13.4.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-web": "~0.18.10",
     "react-router-native": "^6.11.2",
     "styled-component": "^2.8.0",
