--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@react-native-community/datetimepicker": "6.7.3",
     "@tanstack/react-query": "^4.29.7",
     "@types/styled-components": "^5.1.26",
+    "azure-ad-graph-expo": "^2.1.2",
     "babel-plugin-module-resolver": "^5.0.0",
     "date-fns": "^2.30.0",
     "expo": "~48.0.15",
