Add SSO login prompt to MS on frontend

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "inHEARTive",
     "slug": "inHEARTive",
+    "scheme": "com.intive.inheartive",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./src/assets/icon.png",
