--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,11 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "date-fns": "^2.30.0",
     "expo": "~48.0.15",
+    "expo-auth-session": "~4.0.3",
+    "expo-crypto": "~12.2.1",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
+    "expo-web-browser": "~12.1.1",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-hook-form": "^7.43.9",
