--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,7 +44,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@nx/eslint-plugin": "^16.7.3",
+    "@testing-library/react-native": "^12.2.2",
     "@types/react": "~18.0.14",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "eslint": "^8.47.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "typescript": "^4.9.4"
   },
   "private": true,
