--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,3 +1,10 @@
 {
-  "singleQuote": true
+  "singleQuote": true,
+  "useTabs": false,
+  "endOfLine": "lf",
+  "printWidth": 120,
+  "trailingComma": "es5",
+  "semi": true,
+  "jsxSingleQuote": true,
+  "arrowParens": "always"
 }
