--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "deploy": "firebase deploy",
     "build-deploy": "npm run build && npm run deploy",
     "publish:ios": "eas submit --platform ios",
-    "publish:android": "eas submit --platform android"
+    "publish:android": "eas submit --platform android",
+    "lint": "npx eslint App.tsx ./src",
+    "lint:fix": "npx eslint App.tsx ./src --fix"
   },
   "dependencies": {
     "@azure/msal-react": "^1.5.9",
@@ -44,7 +46,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.2.2",
     "@types/react": "~18.0.14",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^3.0.2",
     "typescript": "^4.9.4"
   },
   "private": true,
