--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -21,6 +21,8 @@
         "prettier"
     ],
     "rules": {
-      "react/react-in-jsx-scope": "off"
+      "react/react-in-jsx-scope": "off",
+      "react/prop-types": "off",
+      "@typescript-eslint/ban-ts-comment": "off"
     }
 }
