--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,15 @@
     "build-deploy": "npm run build && npm run deploy",
     "publish:ios": "eas submit --platform ios",
     "publish:android": "eas submit --platform android",
-    "lint": "npx eslint App.tsx ./src",
-    "lint:fix": "npx eslint App.tsx ./src --fix"
+    "lint": "npx eslint App.tsx ./src --ext .ts,.tsx",
+    "lint:fix": "npx eslint App.tsx ./src --fix --ext .ts,.tsx"
   },
   "dependencies": {
     "@azure/msal-react": "^1.5.9",
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
+    "@storybook/react-native": "^6.5.6",
     "@tanstack/react-query": "^4.29.7",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-module-resolver": "^5.0.0",
@@ -48,6 +49,7 @@
     "@babel/core": "^7.20.0",
     "@testing-library/react-native": "^12.2.2",
     "@types/react": "~18.0.14",
+    "@types/styled-components-react-native": "^5.2.1",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "eslint": "^8.47.0",
